# AlphaOmega

./: .gitignore  README.md  vacuum_texture.csv
code/julia/: Manifest.toml  visualize_texture.jl
code/julia/viz/: check_pi_4.jl
code/julia_engine/: visualize_texture.jl  visualize_vacuum.jl
code/python/scripts/: run_polyakov.py  visualize_vortex.py
code/python/src/quantum_abhidharma/: observables.py
code/python/src/quantum_abhidharma.egg-info/: top_level.txt
code/python_engine/: pyproject.toml
code/python_engine/scripts/: run_vortex.py
code/python_engine/src/quantum_abhidharma.egg-info/: PKG-INFO  SOURCES.txt
code/python_ports/scripts/: inspect_data.py
docs/: CNAME  index.html
docs/formalism/: main.tex
src/: Institute.jl  Institute_Spectral.jl  dynamics.py  lattice.py
src/Engine/: Constants.jl  Types.jl
src/Engine/Arithmetic/: Primes.jl  Zeta.jl
src/Engine/Diagnostics/: Observables.jl
src/Engine/QCD/: Dynamics.jl  Initialize.jl
src/julia/: time_cube
src/python/scripts/: plot_texture.py
