[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-abhidharma"
version = "0.1.0"
description = "Lattice QCD engine for the Dual-Sector Vacuum research program"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "Alexander Yiannopoulos", email = "alexander@example.com"}
]
dependencies = [
  "numpy",
  "scipy",
  "plotly"
]

[project.urls]
"Homepage" = "https://github.com/quantabhidharma/AlphaOmega"
"Repository" = "https://github.com/quantabhidharma/AlphaOmega"

[tool.setuptools.packages.find]
where = ["src"]